# oreilly-python-course

./: .gitignore  CLAUDE.md  COURSE_OUTLINE.md  INSTRUCTOR_NOTES.md  Makefile  QUICK_START_WINDOWS.md  README.md  Untitled.ipynb  WINDOWS_SETUP.md  automation_workflow_strategy.md  creating_aliases_workflow.md  diagnose-setup.ps1  index-scripts.md  installation-guide-mac.md  installation-guide-windows.md  main.py  oreilly-python-course-cheatsheet-print.html  oreilly-python-course-cheatsheet.html  oreilly-python-course-llms.txt  oreilly-python-course_contents.md  outloook-send-emails-prompt.md  pyproject.toml  quiz_questions.json  setup-windows.ps1  setup.ps1  setup.sh  stock_analysis.pptx  students-automation-suggestions.md
.devcontainer/: devcontainer.json  post-create.sh
assets/: aie-schedule.txt  dashboard_output.html
automation-usecases-to-review/: README.md  batch_image_processor.py  duplicate_file_finder.py  git_repo_analyzer.py  smart_file_organizer.py  website_monitor.py
input/: stock_analysis.pptx
notebooks/: 1.0-intro-python-scripting-basics.ipynb  1.0-python-basics-data-types-strings-operators-updated.ipynb  1.0-python-basics-data-types-strings-operators.ipynb  1.1-python-basics-variables-updated.ipynb  1.1-python-basics-variables.ipynb  1.2-python-basics-functions-updated.ipynb  1.2-python-basics-functions.ipynb  1.3-python-basics-lists-for-loops-updated.ipynb  1.3-python-basics-lists-for-loops.ipynb  1.4-python-basics-dictionaries.ipynb  1.5-python-basics-comparators-updated.ipynb  1.5-python-basics-comparators.ipynb  1.5-python-basics-comparators.md  1.6-python-basics-conditionals-branching-decisions.ipynb  1.6-python-basics-conditionals-branching-decisions.md  1.7-python-basics-working-with-files.ipynb  1.8-python-basics-working-with-tabular-data-csvs.ipynb  1.9-python-basics-packages-and-apis.ipynb  13.0-automatic-downloads-examples.ipynb  2.0-ai-tools-llm-apis.ipynb  2.0-functions-tables-csvs-simple-dbs.ipynb  3.0-file-management-automations.ipynb  4-7-8.py  4.0-automation-frameworks-and-recipes.ipynb  5.0-automating-data-extraction-with-llms.ipynb  5.0-automating-your-browser.ipynb  5.0-automating-your-browser.md  5.1-automating-data-extraction-from-websites.ipynb  6.0-automating-data-extraction-with-llms.ipynb  6.1-automating-data-extraction-from-websites.ipynb  7.0-automating-your-browser.ipynb  README.md  Untitled.ipynb  add_movie_to_watchlist.py  ai-toos-one-by-one.ipynb  ai_tools.py  ca-file2.txt  demo_utils.py  (+11 more)
(+271 files in other folders)
