[project]
name = "oreilly-python-course"
version = "0.1.0"
description = "O'Reilly Live Training - Automate Tasks with Python + AI"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai",
    "pandas", 
    "anthropic",
    "ollama",
    "requests",
    "beautifulsoup4",
    "matplotlib",
    "ipywidgets",
    "playwright",
]

[project.optional-dependencies]
dev = [
    "jupyterlab",
    "ipykernel",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
