[project]
name = "oreilly-python-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anthropic==0.45.2",
    "anyio==4.8.0",
    "appnope==0.1.4",
    "asttokens==3.0.0",
    "beautifulsoup4==4.13.0",
    "certifi==2024.12.14",
    "charset-normalizer==3.4.1",
    "comm==0.2.2",
    "contourpy==1.3.1",
    "cycler==0.12.1",
    "debugpy==1.8.12",
    "decorator==5.1.1",
    "distro==1.9.0",
    "executing==2.1.0",
    "fonttools==4.55.8",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "idna==3.10",
    "ipykernel==6.29.5",
    "ipython==8.31.0",
    "ipywidgets==8.1.5",
    "jedi==0.19.2",
    "jiter==0.8.2",
    "jupyter-client==8.6.3",
    "jupyter-core==5.7.2",
    "jupyterlab-widgets==3.0.13",
    "kiwisolver==1.4.8",
    "matplotlib==3.10.0",
    "matplotlib-inline==0.1.7",
    "nest-asyncio==1.6.0",
    "numpy==2.2.2",
    "ollama==0.4.7",
    "openai==1.60.0",
    "packaging==24.2",
    "pandas==2.2.3",
    "parso==0.8.4",
    "pexpect==4.9.0",
    "pillow==11.1.0",
    "platformdirs==4.3.6",
    "playwright==1.50.0",
    "prompt-toolkit==3.0.50",
    "psutil==6.1.1",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "pydantic==2.10.5",
    "pydantic-core==2.27.2",
    "pyee==12.1.1",
    "pygments==2.19.1",
    "pyparsing==3.2.1",
    "python-dateutil==2.9.0.post0",
    "pytz==2024.2",
    "pyzmq==26.2.0",
    "reportlab>=4.4.4",
    "requests==2.32.3",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "stack-data==0.6.3",
    "tornado==6.4.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-extensions==4.12.2",
    "tzdata==2025.1",
    "urllib3==2.3.0",
    "wcwidth==0.2.13",
    "widgetsnbextension==4.0.13",
]
